# PuerhLab

./: .clang-format  .clang-tidy  .clangd  .clangd.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICE.txt  prompt  right_menu.txt
alcedo_studio/tests/: CMakeLists.txt
alcedo_studio/tests/app/: export_service_test.cpp  filter_service_test.cpp  history_mgmt_service_test.cpp  import_service_test.cpp  import_test_fixation.hpp  pipeline_service_test.cpp  sleeve_service_test.cpp  thumbnail_album_qt_demo.cpp  thumbnail_service_test.cpp
alcedo_studio/tests/decoders/: image_decoder_test.cpp
alcedo_studio/tests/edit/history/: history_test.cpp  history_test_fixation.hpp  transaction_test.cpp  version_test.cpp
alcedo_studio/tests/edit/operators/: op_test_fixation.hpp
alcedo_studio/tests/edit/pipeline/: cpu_pipeline_test.cpp  cuda_preview_vram_reclamation_test.cu  pipeline_scheduler_test.cpp  pipeline_serial_test.cpp  pipeline_test_fixation.hpp  tile_test.cpp
alcedo_studio/tests/gui_pocs/: album_editor_qt_demo.cpp  image_preview_cpu.cpp  ui_test_fixation.hpp
alcedo_studio/tests/image/: batch_import_dng_metadata_test.cpp  dng_metadata_benchmark.cpp  image_buffer_metal_test.cpp  image_buffer_webgpu_test.cpp  image_loader_test.cpp  metadata_extractor_test.cpp
alcedo_studio/tests/io/: export_icc_profile_resolver_test.cpp  image_path_encoding_test.cpp  image_writer_test.cpp
alcedo_studio/tests/leak_detector/: memory_leak_detector.hpp
alcedo_studio/tests/metal/: metal_utils_test.cpp
alcedo_studio/tests/raw/: color_temp_cuda_sanity_test.cpp  cuda_image_geometry_ops_test.cpp  cuda_raw_ops_test.cpp  metal_full_pipeline_preview_test.cpp  metal_raw_ops_test.cpp  metal_raw_stage_preview_test.cpp  raw_processor_pattern_test.cpp  webgpu_raw_ops_test.cpp
alcedo_studio/tests/sleeve/: sleeve_filter_test.cpp  sleeve_fs_test.cpp  sleeve_operation_test.cpp  sleeve_test_fixture.hpp  sleeve_view_test.cpp
alcedo_studio/tests/storage/: image_pool_test.cpp  sleeve_mapper_test.cpp
alcedo_studio/tests/ui/: album_backend_folder_test.cpp  album_backend_i18n_test.cpp  album_backend_image_delete_test.cpp  album_backend_image_details_test.cpp  album_backend_import_test.cpp  album_backend_project_test.cpp  album_backend_test_fixture.hpp  album_backend_thumbnail_test.cpp  d3d_cuda_interop_utils_test.cpp  edit_viewer_logic_test.cpp  editor_dialog_stub.cpp  language_manager_test.cpp  lut_catalog_test.cpp  tone_curve_widget_test.cpp  widget_test_main.cpp
alcedo_studio/tests/utils/: cuda_driver_requirements_test.cpp
pu-erh_lab/src/: CMakeLists.txt
pu-erh_lab/src/app/: album_browse_service.cpp  export_service.cpp  history_mgmt_service.cpp  image_pool_service.cpp  import_service.cpp  pipeline_service.cpp  project_package_backend.cpp  project_package_service.cpp  project_service.cpp  sleeve_filter_service.cpp  sleeve_service.cpp  thumbnail_service.cpp
pu-erh_lab/src/concurrency/: thread_pool.cpp
pu-erh_lab/src/config/: .gitignore  resource.qrc
pu-erh_lab/src/config/CLFs/: C-ARRI_Classic.clf
pu-erh_lab/src/config/ICON/: puerhlab_main.rc
pu-erh_lab/src/config/OCIO/: config.ocio  (+1 more)
pu-erh_lab/src/decoders/: decoder_manager.cpp  decoder_scheduler.cpp  image_decoder.cpp  metadata_decoder.cpp  raw_decoder.cpp  thumbnail_decoder.cpp
pu-erh_lab/src/image/: image.cpp  image_buffer.cpp  image_loader.cpp  metadata_extractor.cpp  metal_image.cpp
pu-erh_lab/src/metal/: metal_context.cpp
pu-erh_lab/src/raw/: raw_decoder.cpp
pu-erh_lab/src/renderer/: pipeline_scheduler.cpp
pu-erh_lab/src/sleeve/: dentry_cache_manager.cpp  path_resolver.cpp  sleeve_base.cpp  sleeve_element.cpp  sleeve_file.cpp  sleeve_filesystem.cpp  sleeve_filter.cpp  sleeve_folder.cpp  sleeve_manager.cpp  sleeve_view.cpp  storage_service.cpp
pu-erh_lab/tests/: CMakeLists.txt  sample_test.cpp
pu-erh_lab/tests/app/: export_service_test.cpp  filter_service_test.cpp  history_mgmt_service_test.cpp  import_service_test.cpp  import_test_fixation.hpp  pipeline_service_test.cpp  sleeve_service_test.cpp  thumbnail_album_qt_demo.cpp  thumbnail_service_test.cpp
pu-erh_lab/tests/decoders/: image_decoder_test.cpp
pu-erh_lab/tests/gui_pocs/: album_editor_qt_demo.cpp  image_preview_cpu.cpp  ui_test_fixation.hpp
pu-erh_lab/tests/image/: image_buffer_metal_test.cpp  image_loader_test.cpp
pu-erh_lab/tests/io/: export_icc_profile_resolver_test.cpp  image_path_encoding_test.cpp  image_writer_test.cpp
pu-erh_lab/tests/leak_detector/: memory_leak_detector.hpp
pu-erh_lab/tests/metal/: metal_utils_test.cpp
pu-erh_lab/tests/raw/: color_temp_cuda_sanity_test.cpp  cuda_image_geometry_ops_test.cpp  cuda_raw_ops_test.cpp  metal_full_pipeline_preview_test.cpp  metal_raw_ops_test.cpp  metal_raw_stage_preview_test.cpp  odt_cuda_sanity_test.cu  raw_processor_pattern_test.cpp  single_raw_decode_test.cpp  single_raw_thumbnail_test.cpp
pu-erh_lab/tests/sleeve/: sleeve_filter_test.cpp  sleeve_fs_test.cpp  sleeve_operation_test.cpp  sleeve_test_fixture.hpp  sleeve_view_test.cpp
pu-erh_lab/tests/storage/: image_pool_test.cpp  sleeve_mapper_test.cpp
pu-erh_lab/tests/ui/: album_backend_folder_test.cpp  album_backend_i18n_test.cpp  album_backend_image_delete_test.cpp  album_backend_image_details_test.cpp  album_backend_import_test.cpp  album_backend_project_test.cpp  album_backend_test_fixture.hpp  album_backend_thumbnail_test.cpp  edit_viewer_logic_test.cpp  editor_dialog_stub.cpp  language_manager_test.cpp  lut_catalog_test.cpp  ui_test_main.cpp
pu-erh_lab/tests/utils/: cuda_driver_requirements_test.cpp
rust/puerh_mind/: .gitignore  Cargo.toml  build.rs
rust/puerh_mind/proto/: common.proto  semantic.proto
rust/puerh_mind/script/: album_demo.py  album_tui.py  batch_label_demo.py  cargo_msvc.cmd  clip_labeling.py  download_dataset.py  download_hires_dataset.py  semantic_client.py  semantic_pb2.py  semantic_pb2_grpc.py
rust/puerh_mind/src/: bootstrap.rs  config.rs  logging.rs  main.rs  proto.rs
(+1288 files in other folders)
